--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CWapps – Privacy Policy</title>
+  <title>CW apps & games – Privacy Policy</title>
 </head>
 <body style="max-width: 800px; margin: 2rem auto; font-family: sans-serif; line-height: 1.6; padding: 1rem;">
   <h1>CWapps – Privacy Policy</h1>
-  <p><em>This Privacy Policy explains how CWapps uses and protects your data when using this app. It outlines our use of third-party services like Google AdMob and Firebase, and your choices regarding data and consent.</em></p>
+  <p><em>This Privacy Policy explains how CW apps & games under the brand AppForge Studio uses and protects your data when using this app. It outlines our use of third-party services like Google AdMob and Firebase, and your choices regarding data and consent.</em></p>
   <p><strong>Effective Date:</strong> 6 June 2025</p>
 
-  <p>CWapps does not collect any personal information directly.</p>
+  <p>CW apps & games does not collect any personal information directly.</p>
 
   <p>However, we use third-party services like Google AdMob and Firebase which may collect data to show ads, improve performance, or track anonymous usage.</p>
 
-  <p>By using Cany of our apps, you agree to the privacy policies of these providers:</p>
+  <p>By using any of our apps, you agree to the privacy policies of these providers:</p>
   <ul>
     <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
   </ul>
@@ -24,6 +24,6 @@
   <p>If you have any questions, please contact us at: <a href="mailto:mysocialmedianow23@gmail.com">mysocialmedianow23@gmail.com</a></p>
 
   <hr />
-  <p><strong>AppForge Studio - CWapps</strong></p>
+  <p><strong>AppForge Studio - CW apps & games </strong></p>
 </body>
 </html>
