--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <ul>
     <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
   </ul>
+    U.S. State Privacy Rights (CCPA and Others)
+    In accordance with the California Consumer Privacy Act (CCPA) and other U.S. state laws, users in eligible regions may opt out of the sale or sharing of their personal data. Our app uses AdMob’s User Messaging Platform to present this option where required.
+
+    Users can manage their data preferences directly through the consent dialog shown on first launch, or by resetting app consent in Settings.
+
 
   <p>You may opt-out of personalized ads and tracking via our in-app settings or via the consent form on first launch (in regions such as UK or EEA).</p>
 
